[build-system]
requires = [ "poetry-core>=1.0.0","ophyd>=1.5", "numpy",
    #"bact_bessyii_mls_ophyd"
]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "bact-mls-ophyd"
version = "0.1.0"
description = "Ophyd devices for metrology light source."
authors = [ "Pierre Schnizer", "Waheedullah Sulaiman Khail"]
license = "GPL-3.0"
homepage = "https://github.com/hz-b/bact-mls-ophyd"
repository = "https://github.com/hz-b/bact-mls-ophyd.git"
documetnation = "https://github.com/hz-b/bact-mls-ophyd"
keywords = []

[tool.poetry.dependencies]
python = ">=3.7"
ophyd  = ">=1.5"
