# -*- coding: utf-8 -*-

[metadata]
name = bact-mls-ophyd
fullname = BACT ophyd devices for Metrology Light Source
version = 0.1.0
url = https://github.com/hz-b/bact-mls-ophyd
author = Waheedullah Sulaiman Khail, Pierre Schnizer
author_email = waheedullah.sulaiman_khail@helmholtz-berlin.de
               pierre.schnizer@helmholtz-berlin.de
description = BACT ophyd devices for Metrology Light Source
classifiers =
	 Development Status :: 2 - Pre-Alpha
         Intended Audience :: Science/Research
         License :: OSI Approved :: GNU General Public License (GPL)
         Programming Language :: Python :: 3
         Topic :: Scientific/Engineering :: Physics

[build-system]
requires = setup_tools

[options]
packages = find:
install_requires =
    ophyd
    numpy

